--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esmanur Çaça | Dashboard v1.7.9</title>
+    <title>Esmanur Çaça | Dashboard v1.8.0</title>
     <style>
         :root { 
             --primary: #2563eb; --dark: #1e293b; --light: #f8fafc; 
@@ -89,22 +89,19 @@
         .control-btn { width: 55px; height: 55px; background: #4a5568; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; cursor: pointer; user-select: none; }
         #char-switch-btn { display: none; margin: 10px auto; padding: 10px; background: #6b21a8; color: white; border: none; border-radius: 8px; width: 200px; font-weight: bold; cursor: pointer; }
 
-        /* BILGI GO ASISTAN (GÜNCELLENDİ: Taşınabilir & Küçük) */
+        /* BILGI GO ASISTAN */
         #bilgi-go-container { 
             position: fixed; bottom: 20px; right: 20px; 
-            width: 270px; /* Küçültüldü */
-            background: white; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.2); 
+            width: 270px; background: white; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.2); 
             z-index: 2000; border: 2px solid var(--bilgi-go); overflow: hidden; display: flex; flex-direction: column; 
         }
         .bg-header { 
             background: var(--bilgi-go); color: white; padding: 10px; font-weight: bold; 
             display: flex; justify-content: space-between; align-items: center; 
-            cursor: move; /* Taşıma ikonu */
-            user-select: none;
+            cursor: move; user-select: none;
         }
         #bg-chat { 
-            height: 200px; /* Küçültüldü */
-            overflow-y: auto; padding: 10px; background: #fff5f5; font-size: 0.85rem; display: flex; flex-direction: column; 
+            height: 200px; overflow-y: auto; padding: 10px; background: #fff5f5; font-size: 0.85rem; display: flex; flex-direction: column; 
         }
         .bg-msg { margin-bottom: 8px; padding: 8px 12px; border-radius: 12px; max-width: 85%; word-wrap: break-word; }
         .bg-bot { background: white; align-self: flex-start; border: 1px solid #eee; color: #333; }
@@ -127,7 +124,7 @@
         <a onclick="showSection('movies')">Filmler</a>
         <a onclick="showSection('games')">Oyunlar</a>
     </nav>
-    <div><span style="margin-right:10px; font-size:0.8rem; opacity:0.7;">v1.7.9</span><button class="btn-log" onclick="toggleLogs()">Günlükler</button></div>
+    <div><span style="margin-right:10px; font-size:0.8rem; opacity:0.7;">v1.8.0</span><button class="btn-log" onclick="toggleLogs()">Günlükler</button></div>
 </header>
 
 <main>
@@ -168,7 +165,7 @@
     </section>
 
     <section id="games-section">
-        <h2 style="text-align:center;">Oyun Salonu (v1.7.9)</h2>
+        <h2 style="text-align:center;">Oyun Salonu (v1.8.0)</h2>
         <div class="game-menu">
             <div class="game-card" onclick="prepareGame('snake')">🐍 Yılan</div>
             <div class="game-card" onclick="prepareGame('pacman')">👻 Pacman</div>
@@ -205,7 +202,7 @@
         <span style="cursor:pointer;" onclick="toggleChat()">_</span>
     </div>
     <div id="bg-chat">
-        <div class="bg-msg bg-bot">Selam Esmanur! Beni küçülttüm ve artık taşınabilirim. Başlığımdan tutup beni istediğin yere sürükle! 🚀</div>
+        <div class="bg-msg bg-bot">Selam Esmanur! Yılan oyununa ızgara, beyaz gözler ve lazerli büyük bir elma ekledim. Çok havalı oldu! 🐍🍎</div>
     </div>
     <div class="bg-input-area">
         <input type="text" id="bg-input" placeholder="Ders sor..." onkeypress="if(event.key==='Enter') sendMessage()">
@@ -216,8 +213,8 @@
 <div id="logModal">
     <span onclick="toggleLogs()" style="float:right; cursor:pointer; color:red; font-weight:bold;">Kapat X</span>
     <h2>📜 Günlükler</h2>
-    <p><strong>v1.7.9:</strong> Bilgi Go asistanı küçültüldü ve sürüklenebilir (taşınabilir) yapıldı.</p>
-    <p><strong>v1.7.8:</strong> Ateş ve Su haritası güncellendi.</p>
+    <p><strong>v1.8.0:</strong> Yılan oyununa ızgara (grid), yılana beyaz gözler ve elmaya lazerli kırmızı çerçeve efekti eklendi.</p>
+    <p><strong>v1.7.9:</strong> Bilgi Go asistanı küçültüldü ve sürüklenebilir yapıldı.</p>
 </div>
 
 <script>
@@ -245,33 +242,12 @@
     function addMsg(t, s) { const d=document.createElement('div'); d.className=`bg-msg bg-${s}`; d.innerHTML=t; document.getElementById('bg-chat').appendChild(d); }
     function toggleChat() { const c=document.getElementById('bg-chat'); c.style.display = c.style.display==='none'?'flex':'none'; }
 
-    // --- BİLGİ GO DRAG & DROP ÖZELLİĞİ (YENİ) ---
+    // --- BİLGİ GO DRAG & DROP ---
     const bgContainer = document.getElementById('bilgi-go-container');
     const bgHeader = document.querySelector('.bg-header');
-    let isDragging = false;
-    let startX, startY, initialLeft, initialTop;
-
-    bgHeader.addEventListener('mousedown', (e) => {
-        isDragging = true;
-        startX = e.clientX;
-        startY = e.clientY;
-        const rect = bgContainer.getBoundingClientRect();
-        initialLeft = rect.left;
-        initialTop = rect.top;
-        bgContainer.style.bottom = 'auto'; // Sabit pozisyonu kaldır
-        bgContainer.style.right = 'auto';
-        bgContainer.style.left = initialLeft + 'px';
-        bgContainer.style.top = initialTop + 'px';
-    });
-
-    document.addEventListener('mousemove', (e) => {
-        if (!isDragging) return;
-        const dx = e.clientX - startX;
-        const dy = e.clientY - startY;
-        bgContainer.style.left = (initialLeft + dx) + 'px';
-        bgContainer.style.top = (initialTop + dy) + 'px';
-    });
-
+    let isDragging = false; let startX, startY, initialLeft, initialTop;
+    bgHeader.addEventListener('mousedown', (e) => { isDragging = true; startX = e.clientX; startY = e.clientY; const rect = bgContainer.getBoundingClientRect(); initialLeft = rect.left; initialTop = rect.top; bgContainer.style.bottom = 'auto'; bgContainer.style.right = 'auto'; bgContainer.style.left = initialLeft + 'px'; bgContainer.style.top = initialTop + 'px'; });
+    document.addEventListener('mousemove', (e) => { if (!isDragging) return; const dx = e.clientX - startX; const dy = e.clientY - startY; bgContainer.style.left = (initialLeft + dx) + 'px'; bgContainer.style.top = (initialTop + dy) + 'px'; });
     document.addEventListener('mouseup', () => { isDragging = false; });
 
     // --- 3. OYUN MOTORU ---
@@ -289,24 +265,13 @@
     function handleKey(k) { 
         if(selectedGame === 'firewater') {
             let targetCode = k; 
-            if(mobileTarget === 'water') {
-                if(k==37) targetCode=65; 
-                if(k==38) targetCode=87; 
-                if(k==39) targetCode=68; 
-            }
+            if(mobileTarget === 'water') { if(k==37) targetCode=65; if(k==38) targetCode=87; if(k==39) targetCode=68; }
             document.dispatchEvent(new KeyboardEvent('keydown', { 'keyCode': targetCode }));
             setTimeout(() => document.dispatchEvent(new KeyboardEvent('keyup', { 'keyCode': targetCode })), 150);
-        } else {
-            document.dispatchEvent(new KeyboardEvent('keydown', { 'keyCode': k })); 
-        }
+        } else { document.dispatchEvent(new KeyboardEvent('keydown', { 'keyCode': k })); }
     }
 
-    function stopGame() { 
-        clearInterval(gameInterval); 
-        gameWrapper.style.display = 'none'; 
-        overlay.style.display = 'none';
-        charSwitchBtn.style.display = 'none';
-    }
+    function stopGame() { clearInterval(gameInterval); gameWrapper.style.display = 'none'; overlay.style.display = 'none'; charSwitchBtn.style.display = 'none'; }
 
     function prepareGame(type) {
         stopGame(); selectedGame = type;
@@ -314,37 +279,51 @@
         document.getElementById('game-title').innerText = type.toUpperCase();
         ctx.fillStyle = "#2d3748"; ctx.fillRect(0,0,400,400); 
         overlay.style.display = 'flex';
-        if(type === 'firewater') {
-            instructions.innerHTML = "ATEŞ: Ok Tuşları | SU: W,A,D<br>Asansörü kullan, kapılara ulaş!";
-            charSwitchBtn.style.display = 'block';
-        } else {
-            instructions.innerHTML = "Başlamak için tıkla!";
-            charSwitchBtn.style.display = 'none';
-        }
+        if(type === 'firewater') { instructions.innerHTML = "ATEŞ: Ok Tuşları | SU: W,A,D<br>Asansörü kullan, kapılara ulaş!"; charSwitchBtn.style.display = 'block'; }
+        else { instructions.innerHTML = "Başlamak için tıkla!"; charSwitchBtn.style.display = 'none'; }
     }
 
-    function runGame() { 
-        overlay.style.display = 'none'; 
-        if(selectedGame === 'snake') startSnake(); 
-        if(selectedGame === 'pacman') initPacman(); 
-        if(selectedGame === 'tetris') startTetris(); 
-        if(selectedGame === 'firewater') startFireWaterPlatform(); 
-    }
+    function runGame() { overlay.style.display = 'none'; if(selectedGame === 'snake') startSnake(); if(selectedGame === 'pacman') initPacman(); if(selectedGame === 'tetris') startTetris(); if(selectedGame === 'firewater') startFireWaterPlatform(); }
 
-    function toggleMobileChar() {
-        mobileTarget = mobileTarget === 'fire' ? 'water' : 'fire';
-        charSwitchBtn.innerText = "Kontrol: " + (mobileTarget === 'fire' ? "ATEŞ 🔥" : "SU 💧");
-        charSwitchBtn.style.background = mobileTarget === 'fire' ? '#ef4444' : '#3b82f6';
-    }
+    function toggleMobileChar() { mobileTarget = mobileTarget === 'fire' ? 'water' : 'fire'; charSwitchBtn.innerText = "Kontrol: " + (mobileTarget === 'fire' ? "ATEŞ 🔥" : "SU 💧"); charSwitchBtn.style.background = mobileTarget === 'fire' ? '#ef4444' : '#3b82f6'; }
 
-    // --- ESKİ OYUNLAR (KORUNDU) ---
+    // --- YILAN OYUNU (GÜNCELLENDİ: IZGARA, GÖZLER, LAZER ELMA) ---
     let snake, food, d, score;
-    function startSnake() { snake = [{x: 180, y: 200}]; food = {x: 100, y: 100}; d = null; score = 0; document.addEventListener("keydown", (e) => { if(e.keyCode==37&&d!="RIGHT")d="LEFT"; else if(e.keyCode==38&&d!="DOWN")d="UP"; else if(e.keyCode==39&&d!="LEFT")d="RIGHT"; else if(e.keyCode==40&&d!="UP")d="DOWN"; }); gameInterval = setInterval(() => { ctx.fillStyle = "#1e293b"; ctx.fillRect(0,0,400,400); for(let i=0; i<snake.length; i++) { ctx.fillStyle = i==0 ? "#4ade80" : "#22c55e"; ctx.beginPath(); ctx.arc(snake[i].x+10, snake[i].y+10, 9, 0, 6.28); ctx.fill(); } ctx.fillStyle = "red"; ctx.fillText("🍎", food.x-2, food.y+18); let nX = snake[0].x, nY = snake[0].y; if(d=="LEFT") nX-=20; if(d=="UP") nY-=20; if(d=="RIGHT") nX+=20; if(d=="DOWN") nY+=20; if(nX==food.x && nY==food.y) { score++; food={x:Math.floor(Math.random()*19)*20, y:Math.floor(Math.random()*19)*20}; } else snake.pop(); if(nX<0||nX>=400||nY<0||nY>=400||snake.some(s=>s.x==nX&&s.y==nY)) { clearInterval(gameInterval); alert("Skor: "+score); prepareGame('snake'); } snake.unshift({x:nX, y:nY}); }, 100); }
+    function startSnake() {
+        snake = [{x: 180, y: 200}]; food = {x: 100, y: 100}; d = null; score = 0;
+        document.addEventListener("keydown", (e) => { if(e.keyCode==37&&d!="RIGHT")d="LEFT"; else if(e.keyCode==38&&d!="DOWN")d="UP"; else if(e.keyCode==39&&d!="LEFT")d="RIGHT"; else if(e.keyCode==40&&d!="UP")d="DOWN"; });
+        gameInterval = setInterval(() => {
+            // Arka Plan ve Izgara
+            ctx.fillStyle = "#1e293b"; ctx.fillRect(0,0,400,400);
+            ctx.strokeStyle = "#334155"; ctx.lineWidth = 0.5;
+            for(let i=20; i<400; i+=20) { ctx.beginPath(); ctx.moveTo(i,0); ctx.lineTo(i,400); ctx.stroke(); ctx.beginPath(); ctx.moveTo(0,i); ctx.lineTo(400,i); ctx.stroke(); }
+
+            // Yılan Çizimi (Gözlü)
+            for(let i=0; i<snake.length; i++) {
+                ctx.fillStyle = i==0 ? "#4ade80" : "#22c55e";
+                ctx.beginPath(); ctx.arc(snake[i].x+10, snake[i].y+10, 9, 0, 6.28); ctx.fill();
+                if(i==0) { // Beyaz Gözler
+                    ctx.fillStyle = "white";
+                    ctx.beginPath(); ctx.arc(snake[i].x+6, snake[i].y+8, 2.5, 0, 6.28); ctx.fill();
+                    ctx.beginPath(); ctx.arc(snake[i].x+14, snake[i].y+8, 2.5, 0, 6.28); ctx.fill();
+                }
+            }
+            // Lazer Elma
+            ctx.shadowColor = "red"; ctx.shadowBlur = 15; ctx.fillStyle = "#ef4444"; ctx.strokeStyle = "#ff0000"; ctx.lineWidth = 2;
+            ctx.beginPath(); ctx.arc(food.x+10, food.y+10, 12, 0, 6.28); ctx.fill(); ctx.stroke(); ctx.shadowBlur = 0;
+
+            let nX = snake[0].x, nY = snake[0].y;
+            if(d=="LEFT") nX-=20; if(d=="UP") nY-=20; if(d=="RIGHT") nX+=20; if(d=="DOWN") nY+=20;
+            if(nX==food.x && nY==food.y) { score++; food={x:Math.floor(Math.random()*19)*20, y:Math.floor(Math.random()*19)*20}; } else snake.pop();
+            if(nX<0||nX>=400||nY<0||nY>=400||snake.some(s=>s.x==nX&&s.y==nY)) { clearInterval(gameInterval); alert("Skor: "+score); prepareGame('snake'); }
+            snake.unshift({x:nX, y:nY});
+        }, 100);
+    }
+
+    // --- DİĞER OYUNLAR (KORUNDU) ---
     function initPacman() { let px=200, py=200, enemy={x:20,y:20}, pScore=0; document.addEventListener("keydown", (e)=>{ if(e.keyCode==37)px-=20; if(e.keyCode==38)py-=20; if(e.keyCode==39)px+=20; if(e.keyCode==40)py+=20; }); gameInterval = setInterval(()=>{ ctx.fillStyle="#000"; ctx.fillRect(0,0,400,400); ctx.fillStyle="yellow"; ctx.beginPath(); ctx.arc(px,py,10,0.2*Math.PI,1.8*Math.PI); ctx.lineTo(px,py); ctx.fill(); if(px<enemy.x)enemy.x-=2; else enemy.x+=2; if(py<enemy.y)enemy.y-=2; else enemy.y+=2; ctx.fillStyle="red"; ctx.beginPath(); ctx.arc(enemy.x,enemy.y,10,0,Math.PI*2); ctx.fill(); pScore++; ctx.fillStyle="white"; ctx.fillText("Kaçış: "+pScore, 10,20); if(Math.abs(px-enemy.x)<15 && Math.abs(py-enemy.y)<15) { clearInterval(gameInterval); alert("YAKALANDIN! Skor: "+pScore); prepareGame('pacman'); } }, 100); }
     const SHAPES = [[[1,1,1,1]],[[1,1,1],[0,1,0]],[[1,1,1],[1,0,0]],[[1,1,1],[0,0,1]],[[1,1],[1,1]],[[1,1,0],[0,1,1]],[[0,1,1],[1,1,0]]]; const COLORS = [null, '#00f0f0', '#a000f0', '#f0a000', '#0000f0', '#f0f000', '#f00000', '#00f000'];
     function startTetris() { const ROW=20, COL=10, SQ=20; let board=Array.from({length:ROW},()=>Array(COL).fill(0)); let piece=randomPiece(); function randomPiece(){let r=Math.floor(Math.random()*SHAPES.length);return{shape:SHAPES[r],color:COLORS[r+1],x:3,y:0};} function drawSquare(x,y,color){ctx.fillStyle=color;ctx.fillRect(x*SQ,y*SQ,SQ,SQ);ctx.strokeStyle="#333";ctx.strokeRect(x*SQ,y*SQ,SQ,SQ);} function draw(){ctx.fillStyle="#1e293b";ctx.fillRect(0,0,400,400);for(let r=0;r<ROW;r++)for(let c=0;c<COL;c++)if(board[r][c])drawSquare(c+5,r,board[r][c]);piece.shape.forEach((row,r)=>{row.forEach((val,c)=>{if(val)drawSquare(piece.x+c+5,piece.y+r,piece.color);});});} function collision(nx,ny,nShape){for(let r=0;r<nShape.length;r++)for(let c=0;c<nShape[r].length;c++){if(!nShape[r][c])continue;let newX=nx+c;let newY=ny+r;if(newX<0||newX>=COL||newY>=ROW)return true;if(newY>=0&&board[newY][newX])return true;}return false;} function lock(){piece.shape.forEach((row,r)=>{row.forEach((val,c)=>{if(val)board[piece.y+r][piece.x+c]=piece.color;});});for(let r=0;r<ROW;r++)if(board[r].every(x=>x)){board.splice(r,1);board.unshift(Array(COL).fill(0));}piece=randomPiece();if(collision(piece.x,piece.y,piece.shape)){clearInterval(gameInterval);alert("Oyun Bitti!");prepareGame('tetris');}} document.addEventListener("keydown",e=>{if(selectedGame!=='tetris')return;if(e.keyCode==37&&!collision(piece.x-1,piece.y,piece.shape))piece.x--;else if(e.keyCode==39&&!collision(piece.x+1,piece.y,piece.shape))piece.x++;else if(e.keyCode==40&&!collision(piece.x,piece.y+1,piece.shape))piece.y++;else if(e.keyCode==38){let rotated=piece.shape[0].map((_,i)=>piece.shape.map(row=>row[i]).reverse());if(!collision(piece.x,piece.y,rotated))piece.shape=rotated;}draw();}); gameInterval=setInterval(()=>{if(!collision(piece.x,piece.y+1,piece.shape))piece.y++;else lock();draw();},500); }
-
-    // --- ATEŞ VE SU (KORUNDU) ---
     function startFireWaterPlatform() {
         const TILE = 20;
         const mapBase = [[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],[1,0,0,0,0,0,0,0,0,0,0,0,1,2,3,1,0,0,0,1],[1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],[1,0,0,1,1,1,0,0,0,0,0,0,1,1,1,1,0,0,0,1],[1,1,1,0,0,1,1,1,0,0,0,0,1,1,1,0,0,1,1,1],[1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],[1,0,0,0,1,1,1,1,1,0,0,1,1,1,1,1,0,0,0,1],[1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],[1,0,0,1,4,4,4,1,0,0,0,0,1,5,5,5,1,0,0,1],[1,1,1,1,1,1,1,1,0,0,0,0,1,1,1,1,1,1,1,1],[1,1,1,1,1,1,1,1,1,0,0,1,1,1,1,1,1,1,1,1]];
